# nudge

./: README.md  main.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
res/templates/: email.html  reply.html
src/nudge/: __init__.py  hello_world.py
src/nudge/controllers/: incoming.py  mailin.py  mailout.py
src/nudge/model/: email.py  message.py
src/nudge/services/: mailgun.py  message.py  openai.py
src/nudge/utils/: env.py  environment.py
src/nudge/view/: loader.py
tests/: test_hello_world.py
