[metadata]
name = nudge
description = An email-wrapped AI agent.
author = heyitscarl-dev
licence = GNU General Public License v3.0
platforms = unix, linux, osx, cygwin, win32

[options]
packages =
  nudge

python_requires = <3.13

package_dir=
  =src
zip_safe = no

[options.package_data]
nudge = py.typed
